Added Task 2,3 solution

--- a/Task 2- To Explore Supervised Machine Learning.ipynb
+++ b/Task 2- To Explore Supervised Machine Learning.ipynb
@@ -257,6 +257,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VISUALIZATION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -367,6 +374,8 @@
     }
    ],
    "source": [
+    "#Aboslute error between actual and original target variable\n",
+    "\n",
     "error=pd.DataFrame({'Actual':y_test,'Predicted':y_pred,'Absolute Error': abs(y_test-y_pred)})\n",
     "error"
    ]
@@ -430,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What will be predicted score if a student study for 9.25hrs in a day."
+    "### What will be predicted score if a student study for 9.25hrs in a day?"
    ]
   },
   {
